# iChatBio-OBIS-agent

./: .gitignore  Dockerfile  Dockerfile_base_2  README.md  compose.yaml  pyproject.toml  requirements.txt  run_tests.sh
src/: __main__.py  agent.py  env.yaml  lang_agent.py  schema.py
src/entrypoints/: checklist.py  dataset.py  dataset_lookup.py  dataset_search.py  facet.py  get_occurrence.py  get_occurrence_multiple_ins.py  institute.py  institute_lookup.py  statistics.py  taxon.py
src/resources/: api_examples.md  system_prompt.md
src/utils/: dataLoader.py  embedding.py  ngrams.py  prompt_helper.py  search_helper.py  utils.py  validator.py
tests/: conftest.py  test_dataset.py  test_facet.py  test_get_occurrence.py  test_institute.py  test_institute_lookup.py  test_obis_agent.py  test_statistics.py  test_taxon.py
tests/resources/: queries.json
